# Milky_Linux

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  milky_osd
src/: main.c  main.h  preset.c  preset.h  signal.c  signal.h  video.c  video.h
src/audio/: capture.c  capture.h  energy.c  energy.h  sound.c  sound.h
src/audio/kiss_fft/: LICENSE.md
src/net/: api.c  api.h
src/video/: bitdepth.c  bitdepth.h  blur.c  blur.h  draw.c  draw.h  palette.c  palette.h  transform.c  transform.h
src/video/effects/: chaser.c  chaser.h  tunnel.c  tunnel.h
